Small fix in the man

--- a/2absp.1
+++ b/2absp.1
@@ -5,7 +5,7 @@
 .SH "NAME"
 2absp - converts file path to absolute path
 .SH "SYNOPSIS"
-\fB2absp\fR [OPTION]
+\fB2absp\fR OPTION
 .RE
 \fB2absp\fR PATH...
 .PP
